--- a/src/main/webapp/views/component-view.html
+++ b/src/main/webapp/views/component-view.html
@@ -4,10 +4,16 @@
     <h3>Device Manager</h3>
 
     <div class="option-header-right">
-      <div class="square-header-button" title="Add Platform" ng-click="componentView.goToAddPlatform()">
+      <div class="square-header-button"
+           title="Add Platform"
+           ng-class="{ 'button-header-active' : ('main.component_configurator.component_view.add_platform' | routeSegmentEqualsTo) }"
+           ng-click="componentView.goToAddPlatform()">
         <span class="glyphicon glyphicon-tasks"></span>
       </div>
-      <div class="square-header-button" title="Add Device" ng-click="componentView.goToAddDevice()">
+      <div class="square-header-button"
+           title="Add Device"
+           ng-class="{ 'button-header-active' : ('main.component_configurator.component_view.add_device' | routeSegmentEqualsTo) }"
+           ng-click="componentView.goToAddDevice()">
         <span class="glyphicon glyphicon-plus"></span>
       </div>
 
@@ -18,10 +24,15 @@
   <div class="option-device-container">
 
     <div ng-show="componentView.deviceData.retrievalStatus['devices'] === componentView.deviceData.operationStatus.IN_PROGRESS">
-      Loading devices...
+      <div class="spinner-container">
+        <div class="spinner">
+        </div>
+      </div>
     </div>
     <div ng-show="componentView.deviceData.retrievalStatus['devices'] === componentView.deviceData.operationStatus.FAILURE">
-      Cannot retrieve devices
+      <div class="message-container-100 error">
+        <span>Cannot retrieve devices</span>
+      </div>
     </div>
     <div ng-show="componentView.deviceData.retrievalStatus['devices'] === componentView.deviceData.operationStatus.SUCCESS" class="option-device"
          ng-repeat="device in componentView.deviceData.devicesByPlatformId[componentView.platformData.currentPlatform.platformId]"
@@ -36,10 +47,11 @@
 
       <div class="option-buttons-container">
         <div class="square-option-device-button"
-             ng-class="{ 'option-device-button-active' : ('id' | routeSegmentParam) == componentView.deviceId }">
+             ng-class="{ 'option-device-button-active' : device.deviceId === componentView.deviceData.currentDevice }">
           <span class="glyphicon glyphicon-info-sign"></span>
         </div>
       </div>
+
     </div>
 
   </div>
