--- a/src/main/webapp/views/device-info.html
+++ b/src/main/webapp/views/device-info.html
@@ -96,44 +96,37 @@
 
     <hr class="line">
 
-    <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.NOT_STARTED" class="button-container-form">
-      <button type="submit" class="info-button" ng-click="componentDevice.deleteDevice()">
-        <span>Delete</span>
-      </button>
+    <div class="button-container-form">
 
-      <button type="submit" class="info-button" ng-click="componentDevice.goToUpdateDevice()">
-        <span>Update</span>
-      </button>
-    </div>
+      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.IN_PROGRESS">
+        <div class="spinner-small-container">
+          <div class="spinner-small">
+          </div>
+        </div>
+      </div>
 
-    <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.IN_PROGRESS" class="button-container-form">
-      <button type="submit" class="info-button">
-        <span>Deleting...</span>
-      </button>
+      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.FAILURE">
+        <div class="message-container error">
+          <span>Error!</span>
+        </div>
+      </div>
 
-      <button type="submit" class="info-button">
-        <span>Update</span>
-      </button>
-    </div>
+      <div ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.SUCCESS">
+        <div class="message-container success">
+          <span>Deleted!</span>
+        </div>
+      </div>
 
-    <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.SUCCESS" class="button-container-form">
-      <button type="submit" class="info-button">
-        <span>Deleted</span>
-      </button>
+      <div class="info-button-container" ng-show="componentDevice.deploymentData.deleteStatus === componentDevice.deploymentData.operationStatus.NOT_STARTED">
+        <button type="submit" class="info-button" ng-click="componentDevice.deleteDevice()">
+          <span>Delete</span>
+        </button>
 
-      <button type="submit" class="info-button">
-        <span>Update</span>
-      </button>
-    </div>
+        <button type="submit" class="info-button" ng-click="componentDevice.goToUpdateDevice()">
+          <span>Update</span>
+        </button>
+      </div>
 
-    <div ng-show="componentDevice.deviceData.deleteStatus === componentDevice.deviceData.operationStatus.FAILURE" class="button-container-form">
-      <button type="submit" class="info-button">
-        <span>¡ERROR!</span>
-      </button>
-
-      <button type="submit" class="info-button">
-        <span>Update</span>
-      </button>
     </div>
 
   </div>
