--- a/src/main/webapp/views/update-maintenance.html
+++ b/src/main/webapp/views/update-maintenance.html
@@ -13,30 +13,22 @@
 
     <form class="add-form" name="add-device">
 
-      <select ng-model="updateMaintenance.id">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Deployment Id:</label>
+      <input type="text" disabled ng-model="updateMaintenance.currentRecord.id">
+      <label class="form-label">Id:</label>
 
-      <select ng-model="updateMaintenance.deviceId">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Device Id:</label>
+      <input type="text" disabled ng-model="updateMaintenance.currentRecord.elementId">
+      <label class="form-label">Element Id:</label>
 
-      <textarea class="text-area" placeholder="description" ng-model="updateMaintenance.description"></textarea>
+      <textarea class="text-area" placeholder="description" ng-model="updateMaintenance.currentRecord.description"></textarea>
       <label class="form-label">description:</label>
 
-      <select ng-model="updateMaintenance.status">
+      <select ng-model="updateMaintenance.currentRecord.status">
         <option value="PENDING">Pending</option>
         <option value="COMPLETED">Completed</option>
       </select>
       <label class="form-label">Status:</label>
 
-      <select ng-model="updateMaintenance.type">
+      <select ng-model="updateMaintenance.currentRecord.type">
         <option value="NOTE">Note</option>
         <option value="ISSUE">Issue</option>
         <option value="TODO">Todo</option>
@@ -47,14 +39,44 @@
         Date:
       </div>
       <div class="info-right padding-0">
-        {{updateMaintenance.date | date: 'dd-MM-yyyy HH:mm:ss'}}
+        {{updateMaintenance.currentRecord.timestamp | date: 'dd-MM-yyyy HH:mm:ss'}}
       </div>
 
       <hr class="line">
 
-      <button type="submit" class="info-button" ng-click="updateMaintenance.addTicket()">
-        <span>Update Ticket</span>
-      </button>
+      <div class="button-container-form">
+
+        <div ng-show="updateMaintenance.deploymentData.deleteStatus === updateMaintenance.deploymentData.operationStatus.IN_PROGRESS">
+          <div class="spinner-small-container">
+            <div class="spinner-small">
+            </div>
+          </div>
+        </div>
+
+        <div ng-show="updateMaintenance.deploymentData.deleteStatus === updateMaintenance.deploymentData.operationStatus.FAILURE">
+          <div class="message-container error">
+            <span>Error!</span>
+          </div>
+        </div>
+
+        <div ng-show="updateMaintenance.deploymentData.deleteStatus === updateMaintenance.deploymentData.operationStatus.SUCCESS">
+          <div class="message-container success">
+            <span>Updated!</span>
+          </div>
+        </div>
+
+        <div class="info-button-container" ng-show="updateMaintenance.deploymentData.deleteStatus === updateMaintenance.deploymentData.operationStatus.NOT_STARTED">
+
+          <button type="submit" class="info-button" ng-click="updateMaintenance.addTicket()">
+            <span>Update Ticket</span>
+          </button>
+        </div>
+
+      </div>
+
+      <!--<button type="submit" class="info-button" ng-click="updateMaintenance.addTicket()">-->
+        <!--<span>Update Ticket</span>-->
+      <!--</button>-->
 
     </form>
 
