--- a/src/main/webapp/views/update-deployment.html
+++ b/src/main/webapp/views/update-deployment.html
@@ -16,12 +16,16 @@
       <input type="text" disabled placeholder="Id" ng-model="updateCtrl.currentDeployment.id">
       <label class="form-label">Id:</label>
 
-      <div class="info-left">
+
+      <input type="text" disabled placeholder="Id" ng-model="updateCtrl.currentDeployment.date">
+      <label class="form-label">Date:</label>
+
+<!--      <div class="info-left">
         Date:
       </div>
       <div class="info-right">
-        {{updateCtrl.currentDeployment.date | date: 'dd-MM-yyyy HH:mm:ss'}}
-      </div>
+        {{updateCtrl.currentDeployment.date | date: 'yyyy-MM-dd'}}
+      </div>-->
 
       <input type="text" disabled placeholder="Location" ng-model="updateCtrl.currentDeployment.location">
       <label class="form-label">Location:</label>
@@ -45,20 +49,43 @@
       <label class="form-label">Devices:</label>
 
       <div ng-repeat="device in updateCtrl.currentDeployment.devices">
-        <input type="text" disabled placeholder="Devices" ng-model=device>
+        <div class="info-left" ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.NOT_STARTED">
+          <button type="submit"
+                  ng-click="updateCtrl.deleteDevice(device)">
+            <span class="glyphicon glyphicon-trash"></span>
+          </button>
+        </div>
+        <div class="info-left" ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.IN_PROGRESS">
+          <button type="submit">
+            <span class="glyphicon glyphicon-refresh"></span>
+          </button>
+        </div>
+        <div class="info-left" ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.SUCCESS">
+          <button type="submit">
+            <span class="glyphicon glyphicon-ok"></span>
+          </button>
+        </div>
+        <div class="info-left" ng-show="updateCtrl.deploymentData.removeDeviceStatus[device] === updateCtrl.deploymentData.operationStatus.FAILURE">
+          <button type="submit">
+            <span class="glyphicon glyphicon-remove"></span>
+          </button>
+        </div>
+        <div class="info-right">
+          <input type="text" disabled placeholder="Devices" ng-model=device>
+        </div>
       </div>
 
       <hr class="line">
 
-      <input type="text" placeholder="Platform Label" ng-model="updateCtrl.newDevicesId">
-      <label class="form-label">New Devices Id:</label>
+      <input type="text" placeholder="Platform Label" ng-model="updateCtrl.newDeviceId">
+      <label class="form-label">New Device Id:</label>
 
-      <button ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.NOT_STARTED" type="submit" class="info-button" ng-click="updateCtrl.addDevices()">
-        <span>Add Devices</span>
+      <button ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.NOT_STARTED" type="submit" class="info-button" ng-click="updateCtrl.addDevice()">
+        <span>Add Device</span>
       </button>
 
       <button ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.IN_PROGRESS" type="submit" class="info-button">
-        <span>Adding Devices...</span>
+        <span>Adding Device...</span>
       </button>
 
       <button ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.FAILURE" type="submit" class="info-button">
@@ -66,7 +93,7 @@
       </button>
 
       <button ng-show="updateCtrl.deploymentData.addDeviceStatus === updateCtrl.deploymentData.operationStatus.SUCCESS" type="submit" class="info-button">
-        <span>Added Devices</span>
+        <span>Added Device</span>
       </button>
 
     </form>
